Updated navbar and fixed overflow issue

--- a/src/Components/Footer/Footer.css
+++ b/src/Components/Footer/Footer.css
@@ -28,14 +28,14 @@
     padding: 20px 30px;
     border-radius: 50px;
     background: #32323B;
-    padding-right: 4px;
+    padding-right: 5px;
 }
 .footer-email-input input{
     background: transparent;
     border: none;
     color: #a0a0a0;
-    font-size: 10px;
-    font-weight: 500;
+    font-size: 13px;
+    font-weight: 600;
     font-family: Outfit;
     
 }
@@ -68,8 +68,8 @@
 @media(max-width: 768px){
     .footer{
         margin: 50px 0px;
-        width: 90%;
-        
+        width: 95%;
+        align-items: center;
     }
     .footer-top{
         flex-direction: column;
@@ -83,4 +83,13 @@
     .footer-bottom-right{
         font-size: 13px;
     }
+    .footer hr{
+        width: 97%;
+    }
+    .footer-email-input input{
+        width: 45%;
+    }
+.footer-email-input{
+    width: 48.5%;
+}
 }
